# SelfBalancingTrees

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  appveyor.yml  plots.R  report.txt  results_insertions.txt  results_lookup.txt
.github/workflows/: cmake.yml  codeql-analysis.yml
AVL_Tree_src/: AVL.cpp  AVL.hpp  main.cpp
Inputs/: .Rhistory  100000I0R0L.txt  100000I0R100000L.txt  100000I100000R0L.txt  10000I0R0L.txt  10000I0R10000L.txt  10000I9999R0L.txt  1000I0R0L.txt  1000I0R1000L.txt  1000I999R0L.txt  100Inserts.txt  100Inserts90Removal.txt  10Numbers.txt  20Inserts10Removal.txt  input_generator.R  input_generator.sh
List_src/: List.cpp
RB_Tree_src/: Integer.hpp  RB.cpp  RB.hpp  app.cpp  main.cpp  main.hpp
Splay_Tree_src/: Splay.cpp  Splay.hpp  main.cpp
src/: AVL.cpp  Makefile
